--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
     <string name="app_name">World Wonders Manager</string>
-    <string name="name_hint">Enter Wonder Name</string>
-    <string name="name_sub">Wonder Name</string>
-    <string name="address_hint">Enter Wonder Address</string>
-    <string name="address_sub">Wonder Address</string>
+    <string name="name_hint">Country (ex: France)</string>
+    <string name="name_sub">Wonder Country Name</string>
+    <string name="address_hint">Destination (ex: Eiffel Tower)</string>
+    <string name="address_sub">Wonder Destination</string>
     <string name="google_maps">Open in Google Maps</string>
     <string name="img_select">Select a new avatar</string>
 </resources>
